--- a/Vocabulary/MainWindow.xaml
+++ b/Vocabulary/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Vocabulary.MainWindow"
+﻿<Window x:Name ="MainWindowWindow" x:Class="Vocabulary.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,36 +8,72 @@
         Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.3*"/>
+            <RowDefinition Height="3*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-        <Button Grid.Row="0" x:Name="List" Content="Full list" MinHeight="100" Click="List_Click" Foreground="#FF10263C" FontFamily="Algerian" FontSize="22">
-            <Button.Background>
+        <WrapPanel Grid.Row="0"  Grid.ColumnSpan="2">
+            <WrapPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF3399FF" Offset="1"/>
                     <GradientStop Color="#FF246EBB" Offset="0.279"/>
                 </LinearGradientBrush>
-            </Button.Background>
-        </Button>
+            </WrapPanel.Background>
+        </WrapPanel>
 
-        <Button Grid.Row="1" x:Name="Learn" Content="Learning new words" MinHeight="100" Click="Learn_Click" Foreground="#FF246EBB" FontSize="22" FontFamily="Broadway">
-            <Button.Background>
+        <WrapPanel Grid.Row="1" Grid.ColumnSpan="2">
+            <WrapPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF4DA1F5" Offset="0"/>
                     <GradientStop Color="#FF94C6F7" Offset="1"/>
                 </LinearGradientBrush>
-            </Button.Background>
-        </Button>
+            </WrapPanel.Background>
+        </WrapPanel>
 
-        <Button Grid.Row="2" x:Name="Repeat" Content="Repeat learned words" MinHeight="100" Click="Repeat_Click" Foreground="#FF4DA1F5" FontSize="22" FontFamily="Engravers MT">
-            <Button.Background>
+        <WrapPanel Grid.Row="2" Grid.ColumnSpan="2">
+            <WrapPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF94C6F7" Offset="0"/>
                     <GradientStop Color="#FFE5FDFC" Offset="1"/>
                 </LinearGradientBrush>
-            </Button.Background>
+            </WrapPanel.Background>
+        </WrapPanel>
+
+        <Label Grid.Row="1" Grid.ColumnSpan="2" Content="My Vocabulary" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="40" FontFamily="Engravers MT" Foreground="#FF1B25C0"/>
+        <Button Grid.Row="0" Grid.Column="1" x:Name="Auto" Content="Auto" Click="Auto_Click" HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"  FontSize="22" FontFamily="Engravers MT" Background="{x:Null}" BorderThickness="0,0,0,0" Margin="214,0,0,0">
+            <Button.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="1"/>
+                    <GradientStop Color="#FFF3DD11" Offset="0.818"/>
+                </LinearGradientBrush>
+            </Button.Foreground>
         </Button>
+
+        <Button Grid.Row="2" Grid.Column="0" x:Name="List" Content="List of My Words"  Click="List_Click" HorizontalAlignment="Center"
+                VerticalAlignment="Center"  FontSize="22" FontFamily="Engravers MT" Background="{x:Null}" BorderThickness="0,0,0,0">
+            <Button.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="1"/>
+                    <GradientStop Color="#FF116FF3" Offset="0.818"/>
+                </LinearGradientBrush>
+            </Button.Foreground>
+        </Button>
+
+        <Button Grid.Row="2" Grid.Column="1" x:Name="Exercise" Content="Exercise"  Click="Exercise_Click"  HorizontalAlignment="Center"
+                VerticalAlignment="Center"  FontSize="22" FontFamily="Engravers MT" Background="{x:Null}" BorderThickness="0,0,0,0">
+            <Button.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="1"/>
+                    <GradientStop Color="#FF116FF3" Offset="0.818"/>
+                </LinearGradientBrush>
+            </Button.Foreground>
+        </Button>
+
     </Grid>
 </Window>
