--- a/Vocabulary/Settings.xaml
+++ b/Vocabulary/Settings.xaml
@@ -7,6 +7,15 @@
         mc:Ignorable="d"
         Title="Settings" Height="300" Width="300">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="5*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
         
     </Grid>
 </Window>
