--- a/Vocabulary/ListOfWords.xaml
+++ b/Vocabulary/ListOfWords.xaml
@@ -13,67 +13,64 @@
                 <GradientStop Color="#FFDBF9F1" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0.25*"></RowDefinition>
-            <RowDefinition Height="*" ></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" ></ColumnDefinition>
-        </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="1">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="3.5*" ></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="0.5*" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="0.6*" />
             </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Content="New word - " HorizontalAlignment="Center" VerticalAlignment="Center" />
-                <Label Grid.Row="1" Grid.Column="0" Content="Transcription - " HorizontalAlignment="Center" VerticalAlignment="Center" />
-                <Label Grid.Row="2" Grid.Column="0" Content="Translation - " HorizontalAlignment="Center" VerticalAlignment="Center" />
-                <TextBox Grid.Row="0" Grid.Column="1" x:Name="newEnglishTb" Height="23" TextWrapping="Wrap" Text="" Margin="5,5"/>
-                <TextBox Grid.Row="1" Grid.Column="1" x:Name="newTranscriptionTb" Height="23" TextWrapping="Wrap" Text="" Margin="5,5"/>
-                <TextBox Grid.Row="2" Grid.Column="1" x:Name="newUkrainianTb" Height="23" TextWrapping="Wrap" Text="" Margin="5,5"/>
- 
-            </Grid>
-            
-            <Button  Grid.Column="1" x:Name="AddWord" Content="Add Word"  Click="AddWord_Click" Margin="15,15">
-                    <Button.Background>
-                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="#FF44D3DA" Offset="0"/>
-                            <GradientStop Color="#FF99FAFF" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Button.Background>
+
+            <Label Grid.Row="0" Grid.Column="0" Content="New word - " HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Label Grid.Row="1" Grid.Column="0" Content="Transcription - " HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Label Grid.Row="2" Grid.Column="0" Content="Translation - " HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <TextBox Grid.Row="0" Grid.Column="1" x:Name="newEnglishTb" Height="23" TextWrapping="Wrap" Text="" Margin="5,5" VerticalAlignment="Bottom"/>
+            <TextBox Grid.Row="1" Grid.Column="1" x:Name="newTranscriptionTb" Height="23" TextWrapping="Wrap" Text="" Margin="5,5" VerticalAlignment="Bottom"/>
+            <TextBox Grid.Row="2" Grid.Column="1" x:Name="newUkrainianTb" Height="23" TextWrapping="Wrap" Text="" Margin="5,5" VerticalAlignment="Bottom"/>
+
+            <Button  Grid.Column="2" Grid.RowSpan="2" x:Name="AddWord" Content="Add Word"  Click="AddWord_Click" HorizontalAlignment="Center" VerticalAlignment="Top" BorderThickness="0,0,0,0" Margin="0,21,0,0" FontSize="22" Background="{x:Null}">
+                <Button.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FF0F4446" Offset="0.429"/>
+                        <GradientStop Color="#FF99FAFF" Offset="-1"/>
+                        <GradientStop Color="#FF246063" Offset="0.119"/>
+                    </LinearGradientBrush>
+                </Button.Foreground>
             </Button>
-            <Button Grid.Column="2" x:Name="Settings" Content="Settings"  Click="Settings_Click"  Margin="15,15">
-                    <Button.Background>
-                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="#FF44D3DA" Offset="0"/>
-                            <GradientStop Color="#FF99FAFF" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Button.Background>
-           </Button>
         </Grid>
 
-        <DataGrid Grid.Row="1" Name="ListWords" AutoGenerateColumns="False" AlternatingRowBackground="#E6E6E6" RowBackground="#FFFFFF"
-          HorizontalScrollBarVisibility="Disabled" CanUserSortColumns="True">
+        <DataGrid Grid.Row="1" Name="ListWords" IsReadOnly="True" RowHeaderWidth="0" AutoGenerateColumns="False" AlternatingRowBackground="#FF90D5D9" RowBackground="#FFDDFCF4"
+          HorizontalScrollBarVisibility="Disabled" CanUserSortColumns="True" HorizontalGridLinesBrush="#FF145661" VerticalGridLinesBrush="#FF145661" EnableRowVirtualization="False" >
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Номер" Binding="{Binding id}" Width="*"/>
-                <DataGridTextColumn Header="Слово" Binding="{Binding english}" Width="*"/>
-                <DataGridTextColumn Header="Транскрипція" Binding="{Binding transcription}" Width="*"/>
-                <DataGridTextColumn Header="Переклад" Binding="{Binding ukrainian}" Width="*"/>
-                <DataGridTextColumn Header="Статус вивчення" Binding="{Binding status}" Width="Auto"/>
+                <DataGridTextColumn Header="№" Binding="{Binding id}" Width="*"/>
+                <DataGridTextColumn Header="Word" Binding="{Binding english}" Width="2*"/>
+                <DataGridTextColumn Header="Transcription" Binding="{Binding transcription}" Width="2*"/>
+                <DataGridTextColumn Header="Translation" Binding="{Binding ukrainian}" Width="2*"/>
+                <DataGridTextColumn Header="Status" Binding="{Binding status}" Width="*"/>
             </DataGrid.Columns>
+
+            <DataGrid.ColumnHeaderStyle>
+                <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="Background">
+                        <Setter.Value>
+                            <LinearGradientBrush StartPoint="1,1" EndPoint="1,0">
+                                <GradientStop Color="#FFDDFCF4" Offset="1"/>
+                                <GradientStop Color="#FF90D5D9" Offset="0.119"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DataGrid.ColumnHeaderStyle>
 
             <DataGrid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -81,42 +78,7 @@
                     <GradientStop Color="#FFDBF9F1" Offset="1"/>
                 </LinearGradientBrush>
             </DataGrid.Background>
-
         </DataGrid>
 
-        <!--<ListView Grid.Row="1" Grid.Column="0" x:Name="ListWords" FontSize="18">
-            <ListView.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FF93F5DB" Offset="0"/>
-                    <GradientStop Color="#FFDBF9F1" Offset="1"/>
-                </LinearGradientBrush>
-            </ListView.Background>
-            <ListViewItem x:Name="It" >
-                <Grid x:Name="Gr">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid Grid.Column="1" >
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <TextBlock x:Name="w" Grid.Row="0" Text="Way" FontFamily="Stencil" FontSize="16"/>
-                        <TextBlock x:Name="t" Grid.Row="1" Text="Дорога,шлях, магістраль" FontFamily="Century" FontSize="14"/>
-                    </Grid>
-                    <TextBlock x:Name="n" Grid.Column="0" Text="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10
-                               " FontFamily="Stencil"/>
-                    <Image Source="C:/Users/user/Desktop/K2.bmp" Grid.Column="2" Margin="10
-                           "/>
-                </Grid>
-            </ListViewItem>
-        </ListView>-->
-    
-    
     </Grid>
 </Window>
