--- a/Vocabulary/RepeatWords.xaml
+++ b/Vocabulary/RepeatWords.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Name="LearningWordsWindow"  x:Class="Vocabulary.LearningWords"
+﻿<Window x:Class="Vocabulary.RepeatWords"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Vocabulary"
         mc:Ignorable="d"
-        Title="Learning Words" Height="400" Width="500" Loaded="Window_Loaded" Closed="Window_Closed">
+        x:Name="RepeatWordsWindow" Title="Repeating Words" Height="400" Width="500" Loaded="Window_Loaded" Closed="Window_Closed">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#90EE90" Offset="0"/>
+                <GradientStop Color="#FFB6C1" Offset="0"/>
                 <GradientStop Color="#FFFDD878" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
@@ -30,8 +30,8 @@
                     <SolidColorBrush Color="#FFCB6C0E"/>
                 </TextBlock.Foreground>
             </TextBlock>
-            <TextBlock x:Name="textBlockUkrainian" TextWrapping="Wrap" Text="5 new words are waiting for you" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,50" FontFamily="Perpetua Titling MT" FontSize="22"/>
-            <TextBlock x:Name="textBlockTranscription" TextWrapping="Wrap" Text="Press 'Next' and start learning!" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,50" FontFamily="Perpetua Titling MT" FontSize="18"/>
+            <TextBlock x:Name="textBlockUkrainian" TextWrapping="Wrap" Text="This is all words which you learned" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,50" FontFamily="Perpetua Titling MT" FontSize="22"/>
+            <TextBlock x:Name="textBlockTranscription" TextWrapping="Wrap" Text="Press 'Next' and start repeating!" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,50" FontFamily="Perpetua Titling MT" FontSize="18"/>
 
         </Grid>
         <Grid Grid.Row="1">
@@ -40,9 +40,11 @@
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0"  x:Name="Previous" Content="&#x2190;" Click="Previous_Click" Foreground="#FF3DA73D" FontSize="34" FontFamily="Segoe UI Symbol" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-            <Button Grid.Column="1"  x:Name="ChangeStatus" Content="Mark as learned" Click="ChangeStatus_Click" Foreground="#FF3DA73D" FontSize="24" FontFamily="Segoe UI Semibold" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-            <Button Grid.Column="2" x:Name="Next" Content="&#x2192;" Click="Next_Click" Foreground="#FF3DA73D" FontSize="34" FontFamily="Segoe UI Symbol" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+            <Button Grid.Column="0"  x:Name="Previous" Content="&#x2190;" Click="Previous_Click" Foreground="#FFF15E74" FontSize="34" FontFamily="Segoe UI Symbol" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+            <Button Grid.Column="1"  x:Name="ChangeStatus" Content="Mark as unknown" Click="ChangeStatus_Click" Foreground="#FFF15E74" FontSize="24" FontFamily="Segoe UI Semibold" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+            <Button Grid.Column="2" x:Name="Next" Content="&#x2192;" Click="Next_Click" Foreground="#FFF15E74" FontSize="34" FontFamily="Segoe UI Symbol" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
         </Grid>
     </Grid>
 </Window>
